# fastlz-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md
examples/: compress.rs
fastlz-sys/: Cargo.toml  build.rs  genbindings.sh
fastlz-sys/src/: bindings.rs  lib.rs
src/: lib.rs
