[package]
name = "fastlz"
version = "0.1.0"
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mvertescher/fastlz-rs"
homepage = "https://github.com/mvertescher/fastlz-rs"
description = """
Bindings to FastLZ compression and decompression.
"""
categories = ["compression", "api-bindings"]

[dependencies]
fastlz-sys = { version = "0.1", path = "./fastlz-sys" }
